--- a/dataset-importer-back/pom.xml
+++ b/dataset-importer-back/pom.xml
@@ -128,6 +128,17 @@
 					<artifactId>spring-boot-starter-tomcat</artifactId>
 					<scope>compile</scope>
 				</dependency>
+
+				<dependency>
+					<groupId>org.mariadb.jdbc</groupId>
+					<artifactId>mariadb-java-client</artifactId>
+				</dependency>
+
+				<dependency>
+					<groupId>mysql</groupId>
+					<artifactId>mysql-connector-java</artifactId>
+				</dependency>
+
 			</dependencies>
 
 			<build>
