--- a/dataset-importer-service/pom.xml
+++ b/dataset-importer-service/pom.xml
@@ -158,6 +158,17 @@
 			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
 	</dependencies>
 
@@ -207,6 +218,28 @@
 					</plugins>
 				</configuration>
 			</plugin>
+            <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxb2-maven-plugin</artifactId>
+				<version>2.5.0</version>
+				<executions>
+					<execution>
+						<id>xsd-to-java</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<sources>
+						<source>src/main/resources/cerifschema/xsd</source>
+					</sources>
+					<xjbSources>
+						<xjbSource>src/main/resources/cerifschema/xjb</xjbSource>
+					</xjbSources>
+					<outputDirectory>${project.build.directory}/generated-sources/xjc</outputDirectory>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
