--- a/dataset-importer-service/pom.xml
+++ b/dataset-importer-service/pom.xml
@@ -17,6 +17,11 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
+
 		<!-- UM ASIO - dependencies -->
 		<dependency>
 			<groupId>es.um.asio</groupId>
